# streamlit-sp-cookies

./: MANIFEST.in  pyproject.toml  setup.py
streamlit_sp_cookies/: __init__.py
streamlit_sp_cookies/frontend/: index.html
